tests/snapshots/snapshots__budget_react_hot_toast_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1031 words)

components/checkmark.tsx
     3→const circleAnimation = keyframes`
    13→const checkmarkAnimation = keyframes`
    29→export interface CheckmarkTheme {
    30→  primary?: string;
    31→  secondary?: string;
    32→}
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`
    35→  width: 20px;
    36→  opacity: 0;
    37→  height: 20px;
      →…
components/error.tsx
     3→const circleAnimation = keyframes`
    13→const firstLineAnimation = keyframes`
    23→const secondLineAnimation = keyframes`
    33→export interface ErrorTheme {
    34→  primary?: string;
    35→  secondary?: string;
    36→}
    38→export const ErrorIcon = styled('div')<ErrorTheme>`
    39→  width: 20px;
    40→  opacity: 0;
    41→  height: 20px;
      →…
components/loader.tsx
     3→const rotate = keyframes`
    12→export interface LoaderTheme {
    13→  primary?: string;
    14→  secondary?: string;
    15→}
    17→export const LoaderIcon = styled('div')<LoaderTheme>`
    18→  width: 12px;
    19→  height: 12px;
    20→  box-sizing: border-box;
      →…
components/toast-bar.tsx
     8→const enterAnimation = (factor: number) => `
     9→0% {transform: translate3d(0,${factor * -200}%,0) scale(.6); opacity:.5;}
    10→100% {transform: translate3d(0,0,0) scale(1); opacity:1;}
    11→`;
    13→const exitAnimation = (factor: number) => `
    14→0% {transform: translate3d(0,0,-1px) scale(1); opacity:1;}
    15→100% {transform: translate3d(0,${factor * -150}%,-1px) scale(.6); opacity:0;}
    16→`;
    18→const fadeInAnimation = `0%{opacity:0;} 100%{opacity:1;}`;
    19→const fadeOutAnimation = `0%{opacity:1;} 100%{opacity:0;}`;
    22→const ToastBarBase = styled('div')`
    38→const Message = styled('div')`
    47→interface ToastBarProps {
    48→  toast: Toast;
    49→  position?: ToastPosition;
    50→  style?: React.CSSProperties;
    51→  children?: (components: {
    52→    icon: Renderable;
    53→    message: Renderable;
    54→  }) => Renderable;
    55→}
    57→const getAnimationStyle = (
    58→  position: ToastPosition,
    59→  visible: boolean
    60→): React.CSSProperties => {
    61→  const top = position.includes('top');
      →…
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(
    76→  ({ toast, position, style, children }) => {
    77→    const animationStyle: React.CSSProperties = toast.height
    78→      ? getAnimationStyle(
      →…
components/toast-icon.tsx
     9→const StatusWrapper = styled('div')`
    13→const IndicatorWrapper = styled('div')`
    22→const enter = keyframes`
    32→export const AnimatedIconWrapper = styled('div')`
    33→  position: relative;
    34→  transform: scale(0.6);
    35→  opacity: 0.4;
      →…
    41→export type IconThemes = Partial<{
    42→  success: CheckmarkTheme;
    43→  error: ErrorTheme;
    44→  loading: LoaderTheme;
    45→}>;
    47→export const ToastIcon: React.FC<{
    48→  toast: Toast;
    49→}> = ({ toast }) => {
    50→  const { icon, type, iconTheme } = toast;
    51→  if (icon !== undefined) {
    52→    if (typeof icon === 'string') {
    53→      return <AnimatedIconWrapper>{icon}</AnimatedIconWrapper>;
    54→    } else {
    55→      return icon;
    56→    }
    57→  }
    58→
    59→  if (type === 'blank') {
    60→    return null;
    61→  }
    62→
      →…
components/toaster.tsx
    15→const ToastWrapper = ({
    16→  id,
      →…
    47→const getPositionStyle = (
    48→  position: ToastPosition,
    49→  offset: number
    50→): React.CSSProperties => {
    51→  const top = position.includes('top');
      →…
    76→const activeClass = css`
    83→const DEFAULT_OFFSET = 16;
    85→export const Toaster: React.FC<ToasterProps> = ({
    86→  reverseOrder,
    87→  position = 'top-center',
    88→  toastOptions,
    89→  gutter,
    90→  children,
    91→  toasterId,
    92→  containerStyle,
    93→  containerClassName,
    94→}) => {
    95→  const { toasts, handlers } = useToaster(toastOptions, toasterId);
    96→
    97→  return (
    98→    <div
    99→      data-rht-toaster={toasterId || ''}
   100→      style={{
      →…
core/store.ts
     4→export const TOAST_EXPIRE_DISMISS_DELAY …
     5→export const TOAST_LIMIT …
     6→export const DEFAULT_TOASTER_ID …
     8→interface ToasterSettings {
     9→  toastLimit: number;
    10→}
    12→export enum ActionType {
    13→  ADD_TOAST,
    14→  UPDATE_TOAST,
    15→  UPSERT_TOAST,
    16→  DISMISS_TOAST,
    17→  REMOVE_TOAST,
    18→  START_PAUSE,
    19→  END_PAUSE,
    20→}
    22→export type Action …
    52→interface ToasterState {
    53→  toasts: Toast[];
    54→  settings: ToasterSettings;
    55→  pausedAt: number | undefined;
    56→}
    58→interface State {
    59→  [toasterId: string]: ToasterState;
    60→}
    62→export const reducer = (state: ToasterState, action: Action): ToasterState => {
    63→  const { toastLimit } = state.settings;
    64→
    65→  switch (action.type) {
    66→    case ActionType.ADD_TOAST:
    67→      return {
      →…
   136→const listeners: Array<
   137→  [toasterId: string, reducer: (state: ToasterState) => void]
   138→> = [];
   140→const defaultToasterState: ToasterState = {
   141→  toasts: [],
   142→  pausedAt: undefined,
   143→  settings: {
   144→    toastLimit: TOAST_LIMIT,
   145→  },
   146→};
   149→export const dispatch = (action: Action, toasterId = DEFAULT_TOASTER_ID) => {
   150→  memoryState[toasterId] = reducer(
   151→    memoryState[toasterId] || defaultToasterState,
   152→    action
   153→  );
   154→  listeners.forEach(([id, listener]) => {
      →…
   161→export const dispatchAll = (action: Action) =>
   162→  Object.keys(memoryState).forEach((toasterId) => dispatch(action, toasterId));
   164→export const getToasterIdFromToastId = (toastId: string) =>
   165→  Object.keys(memoryState).find((toasterId) =>
   166→    memoryState[toasterId].toasts.some((t) => t.id === toastId)
   167→  );
   169→export const createDispatch =
   170→  (toasterId = DEFAULT_TOASTER_ID) =>
   171→  (action: Action) => {
   172→    dispatch(action, toasterId);
   173→  };
   175→export const defaultTimeouts …
   185→export const useStore = (
   186→  toastOptions: DefaultToastOptions = {},
   187→  toasterId: string = DEFAULT_TOASTER_ID
   188→): ToasterState => {
   189→  const [state, setState] = useState<ToasterState>(
   190→    memoryState[toasterId] || defaultToasterState
   191→  );
   192→  const initial = useRef(memoryState[toasterId]);
   193→
      →…
core/toast.ts
    19→type Message = ValueOrFunction<Renderable, Toast>;
    21→type ToastHandler = (message: Message, options?: ToastOptions) => string;
    23→const createToast = (
    24→  message: Message,
    25→  type: ToastType = 'blank',
    26→  opts?: ToastOptions
    27→): Toast => ({
    28→  createdAt: Date.now(),
    29→  visible: true,
    30→  dismissed: false,
    31→  type,
      →…
    42→const createHandler =
    43→  (type?: ToastType): ToastHandler =>
    44→  (message, options) => {
    45→    const toast = createToast(message, type, options);
    46→
    47→    const dispatch = createDispatch(
    48→      toast.toasterId || getToasterIdFromToastId(toast.id)
      →…
    55→const toast = (message: Message, opts?: ToastOptions) =>
    56→  createHandler('blank')(message, opts);
core/types.ts
     3→export type ToastType …
     4→export type ToastPosition …
    12→export type Renderable …
    14→export interface IconTheme {
    15→  primary: string;
    16→  secondary: string;
    17→}
    19→export type ValueFunction …
    20→export type ValueOrFunction …
    24→const isFunction = <TValue, TArg>(
    25→  valOrFunction: ValueOrFunction<TValue, TArg>
    26→): valOrFunction is ValueFunction<TValue, TArg> =>
    27→  typeof valOrFunction === 'function';
    29→export const resolveValue = <TValue, TArg>(
    30→  valOrFunction: ValueOrFunction<TValue, TArg>,
    31→  arg: TArg
    32→): TValue => (isFunction(valOrFunction) ? valOrFunction(arg) : valOrFunction);
    34→export interface Toast {
    35→  type: ToastType;
    36→  id: string;
    37→  toasterId?: string;
    38→  message: ValueOrFunction<Renderable, Toast>;
    39→  icon?: Renderable;
    40→  duration?: number;
    41→  pauseDuration: number;
    42→  position?: ToastPosition;
    43→  removeDelay?: number;
    44→
    45→  ariaProps: {
    46→    role: 'status' | 'alert';
    47→    'aria-live': 'assertive' | 'off' | 'polite';
    48→  };
    49→
    50→  style?: CSSProperties;
    51→  className?: string;
    52→  iconTheme?: IconTheme;
    53→
    54→  createdAt: number;
    55→  visible: boolean;
    56→  dismissed: boolean;
    57→  height?: number;
    58→}
    60→export type ToastOptions …
    76→export type DefaultToastOptions …
    80→export interface ToasterProps {
    81→  position?: ToastPosition;
    82→  toastOptions?: DefaultToastOptions;
    83→  reverseOrder?: boolean;
    84→  gutter?: number;
    85→  containerStyle?: React.CSSProperties;
    86→  containerClassName?: string;
    87→  toasterId?: string;
    88→  children?: (toast: Toast) => React.ReactElement;
    89→}
    91→export interface ToastWrapperProps {
    92→  id: string;
    93→  className?: string;
    94→  style?: React.CSSProperties;
    95→  onHeightUpdate: (id: string, height: number) => void;
    96→  children?: React.ReactNode;
    97→}
core/use-toaster.ts
     6→export const REMOVE_DELAY …
     8→export const useToaster = (
     9→  toastOptions?: DefaultToastOptions,
    10→  toasterId: string = 'default'
    11→) => {
    12→  const { toasts, pausedAt } = useStore(toastOptions, toasterId);
    13→  const toastTimeouts = useRef(
    14→    new Map<Toast['id'], ReturnType<typeof setTimeout>>()
    15→  ).current;
    16→
      →…
core/utils.ts
     1→export const genId …
     8→export const prefersReducedMotion …
