tests/snapshots/snapshots__budget_react_hot_toast_src_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2022 tokens)

components/checkmark.tsx
     1→import { styled, keyframes } from 'goober';
     3→const circleAnimation = keyframes`
    13→const checkmarkAnimation = keyframes`
    29→export interface CheckmarkTheme {
    30→  primary?: string;
    31→  secondary?: string;
    32→}
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`

components/error.tsx
     1→import { styled, keyframes } from 'goober';
     3→const circleAnimation = keyframes`
    13→const firstLineAnimation = keyframes`
    23→const secondLineAnimation = keyframes`
    33→export interface ErrorTheme {
    34→  primary?: string;
    35→  secondary?: string;
    36→}
    38→export const ErrorIcon = styled('div')<ErrorTheme>`

components/loader.tsx
     1→import { styled, keyframes } from 'goober';
     3→const rotate = keyframes`
    12→export interface LoaderTheme {
    13→  primary?: string;
    14→  secondary?: string;
    15→}
    17→export const LoaderIcon = styled('div')<LoaderTheme>`

components/toast-bar.tsx
     1→import * as React from 'react';
     2→import { styled, keyframes } from 'goober';
     4→import { Toast, ToastPosition, resolveValue, Renderable } from '../core/types';
     5→import { ToastIcon } from './toast-icon';
     6→import { prefersReducedMotion } from '../core/utils';
     8→const enterAnimation …
    13→const exitAnimation …
    18→const fadeInAnimation = `0%{opacity:0;} 100%{opacity:1;}`;
    19→const fadeOutAnimation = `0%{opacity:1;} 100%{opacity:0;}`;
    22→const ToastBarBase = styled('div')`
    38→const Message = styled('div')`
    47→interface ToastBarProps {
    57→const getAnimationStyle …
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(

components/toast-icon.tsx
     1→import * as React from 'react';
     2→import { styled, keyframes } from 'goober';
     4→import { Toast } from '../core/types';
     5→import { ErrorIcon, ErrorTheme } from './error';
     6→import { LoaderIcon, LoaderTheme } from './loader';
     7→import { CheckmarkIcon, CheckmarkTheme } from './checkmark';
     9→const StatusWrapper = styled('div')`
    13→const IndicatorWrapper = styled('div')`
    22→const enter = keyframes`
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    47→export const ToastIcon: React.FC<{
    48→  toast: Toast;
    49→}> = ({ toast }) => {
      →…

components/toaster.tsx
     1→import { css, setup } from 'goober';
     2→import * as React from 'react';
     3→import {
     4→  resolveValue,
     5→  ToasterProps,
     6→  ToastPosition,
     7→  ToastWrapperProps,
     8→} from '../core/types';
     9→import { useToaster } from '../core/use-toaster';
    10→import { prefersReducedMotion } from '../core/utils';
    11→import { ToastBar } from './toast-bar';
    15→const ToastWrapper = ({
    47→const getPositionStyle = (
    48→  position: ToastPosition,
    49→  offset: number
    50→): React.CSSProperties => {
    76→const activeClass = css`
    83→const DEFAULT_OFFSET = 16;
    85→export const Toaster: React.FC<ToasterProps> = ({
    86→  reverseOrder,
    87→  position = 'top-center',
    88→  toastOptions,
    89→  gutter,
    90→  children,
      →  …

core/store.ts
     1→import { useEffect, useState, useRef } from 'react';
     2→import { DefaultToastOptions, Toast, ToastType } from './types';
     4→export const TOAST_EXPIRE_DISMISS_DELAY = 1000;
     5→export const TOAST_LIMIT = 20;
     6→export const DEFAULT_TOASTER_ID = 'default';
     8→interface ToasterSettings {
    12→export enum ActionType {
    13→  ADD_TOAST,
    14→  UPDATE_TOAST,
    15→  UPSERT_TOAST,
    16→  DISMISS_TOAST,
    17→  REMOVE_TOAST,
    18→  START_PAUSE,
    19→  END_PAUSE,
    20→}
    22→export type Action =
    23→  | {
    52→interface ToasterState {
    58→interface State {
    62→export const reducer = (state: ToasterState, action: Action): ToasterState => {
   136→const listeners: Array<
   140→const defaultToasterState: ToasterState = {
   149→export const dispatch = (action: Action, toasterId = DEFAULT_TOASTER_ID) => {
   161→export const dispatchAll = (action: Action) =>
   162→  Object.keys(memoryState).forEach((toasterId) => dispatch(action, toasterId));
   164→export const getToasterIdFromToastId = (toastId: string) =>
   165→  Object.keys(memoryState).find((toasterId) =>
   166→    memoryState[toasterId].toasts.some((t) => t.id === toastId)
   167→  );
   169→export const createDispatch =
   170→  (toasterId = DEFAULT_TOASTER_ID) =>
   171→  (action: Action) => {
   175→export const defaultTimeouts: {
   185→export const useStore = (
   186→  toastOptions: DefaultToastOptions = {},
   187→  toasterId: string = DEFAULT_TOASTER_ID
   188→): ToasterState => {

core/toast.ts
     1→import { …
    10→import { genId } from './utils …
    11→import { …
    19→type Message = ValueOrFunction<Renderable, Toast>;
    21→type ToastHandler = (message: Message, options?: ToastOptions) => string;
    23→const createToast …
    42→const createHandler …
    55→const toast …

core/types.ts
     1→import { CSSProperties } from 'react';
     3→export type ToastType …
     4→export type ToastPosition …
    12→export type Renderable …
    14→export interface IconTheme {
    15→  primary: string;
      →  …
    19→export type ValueFunction …
    20→export type ValueOrFunction …
    24→const isFunction …
    29→export const resolveValue = <TValue, TArg>(
    30→  valOrFunction: ValueOrFunction<TValue, TArg>,
    31→  arg: TArg
    32→): TValue => (isFunction(valOrFunction) ? valOrFunction(arg) : valOrFunction);
    34→export interface Toast {
    35→  type: ToastType;
      →  …
    60→export type ToastOptions …
    76→export type DefaultToastOptions …
    80→export interface ToasterProps {
    81→  position?: ToastPosition;
      →  …
    91→export interface ToastWrapperProps {
    92→  id: string;
      →  …

core/use-toaster.ts
     1→import { useEffect, useCallback, useRef } from 'react';
     2→import { createDispatch, ActionType, useStore, dispatch } from './store';
     3→import { toast } from './toast';
     4→import { DefaultToastOptions, Toast, ToastPosition } from './types';
     6→export const REMOVE_DELAY = 1000;
     8→export const useToaster = (
     9→  toastOptions?: DefaultToastOptions,
    10→  toasterId: string = 'default'
    11→) => {
    12→  const { toasts, pausedAt } = useStore(toastOptions, toasterId);
    13→  const toastTimeouts = useRef(
      →  …

core/utils.ts
     1→export const genId = (() => {
     8→export const prefersReducedMotion = (() => {

headless/index.ts
     1→import { toast } from '../core/toast';

index.ts
     1→import { toast } from './core/toast';
